[tool.poetry]
name = "dumbo-runlim"
version = "0.1.0"
description = "A CLI to run and limit processes (and their subprocesses)"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dumbo-utils = "^0.1.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
